--- a/streamlit_signin_ui_1.2/requirements.txt
+++ b/streamlit_signin_ui_1.2/requirements.txt
@@ -5,7 +5,7 @@ pandas~=2.2.0
 oauth2client~=4.1.3
 google-api-python-client~=2.119.0
 setuptools>=68.0.0
-smtplib
+argon2-cffi
 streamlit_lottie
 streamlit_option_menu
 streamlit_cookies_manager
